--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 html,
 body {
   height: 100%;
+  background-color: #e2e8f0;
 }
 
 :root {
@@ -20,13 +21,24 @@ body {
   align-items: center;
   justify-content: center;
 }
+div.container {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+div.board-container {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  align-items: center;
+}
 
 div.board {
   aspect-ratio: 1;
   display: grid;
   grid: 1fr 1fr 1fr/ 1fr 1fr 1fr;
   gap: var(--board-gap);
-  background-color: black;
+  background-color: #94a3b8;
   width: calc(3 * var(--board-box-width)+ 2 * var(--board-gap));
   place-content: space-evenly;
   border-radius: 10px;
@@ -35,21 +47,33 @@ div.board {
 div.board-box {
   aspect-ratio: 1;
   width: var(--board-box-width);
-  background-color: red;
+  background-color: #334155;
   display: grid;
   place-content: center;
   font-size: calc(var(--board-box-width) * 0.75);
   border-radius: 10px;
+  color: #f8fafc;
 }
 
 div.board-box.playable:hover {
-  background-color: aqua;
+  background-color: #1e293b;
 }
 
 div.board-box.playable:active {
-  background-color: chocolate;
+  background-color: #020617;
 }
 
 h1.winner-bar {
   font-size: 6rem;
+}
+h1.title {
+  font-size: 3rem;
+}
+
+button {
+  padding: 10px 20px;
+  border-radius: 3px;
+  border: none;
+  background-color: #9ca3af;
+  font-size: 2rem;
 }
